# hypermodern-python

./: .flake8  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yaml
docs/: conf.py  index.rst
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
