[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Andrew Casey <accasey@hotmail.com.au>"]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "https://github.com/accasey/hypermodern-python"
repository = "https://github.com/accasey/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
